# frameforge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
benchmarks/: run_benchmarks.py
docs/: architecture.md  benchmarks.html  index.html  packing-design.md  video-compression.html
examples/: basic_decode.py  clip_sampling.py  dataloader_integration.py  multi_camera_sync.py
frameforge/: __init__.py  cache.py  prefetch.py  reader.py  writer.py
frameforge/backends/: __init__.py  base.py  decord_backend.py  opencv_backend.py  pyav_backend.py  torchcodec_backend.py
frameforge/benchmark/: __init__.py  __main__.py  configs.py  report.py  runner.py
frameforge/dataloader/: __init__.py  collate.py  dataset.py
frameforge/packing/: __init__.py  __main__.py  config.py  dataset.py  packer.py
frameforge/sampling/: __init__.py  sync.py  temporal.py
notebooks/: data_packing.ipynb  getting_started.ipynb  getting_started_colab.ipynb
tests/: conftest.py  test_backends.py  test_cache.py  test_dataloader.py  test_packing.py  test_reader.py  test_sampling.py
