[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frameforge"
version = "0.1.0"
description = "Video encoding/decoding utilities for robotics foundation model data pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "frameforge contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
pyav = ["av>=10.0"]
torchcodec = ["torchcodec>=0.1"]
decord = ["decord>=0.6"]
opencv = ["opencv-python>=4.8"]
all = [
    "av>=10.0",
    "torchcodec>=0.1",
    "decord>=0.6",
    "opencv-python>=4.8",
]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "av>=10.0",
]
benchmark = [
    "pynvml>=11.0",
]

[project.scripts]
frameforge-bench = "frameforge.benchmark.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
